# src/modules/user/user.controller.ts
@@ -16,7 +16,7 @@ import { UserBirthdayAlertScheduleService } from '../user-birthday-alert-schedul
 import { CreateUserDto } from './dto/create-user.dto';
 import { UpdateUserDto } from './dto/update-user.dto';
 
-@Controller('v1/user')
+@Controller('api/v1/user')
 export class UserController {
   constructor(
     private readonly userService: UserService,
